openshift/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: caddy-upload
  name: caddy-upload
spec:
  ports:
  - name: http
    port: 2011
    protocol: TCP
    targetPort: 2011
  selector:
    app: caddy-upload
  type: ClusterIP
